--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,8 @@ dependencies {
     //Retrofit2
     implementation "com.squareup.retrofit2:retrofit:$retrofit2_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit2_version"
+
+    implementation "com.squareup.picasso:picasso:$picasso_version"
+
+    implementation "com.google.android.material:material:$material_version"
 }
