--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ android {
     dataBinding {
         enabled = true
     }
+    compileOptions {
+        targetCompatibility = 1.8
+        sourceCompatibility = 1.8
+    }
 }
 
 dependencies {
@@ -46,4 +50,9 @@ dependencies {
     implementation "com.squareup.picasso:picasso:$picasso_version"
 
     implementation "com.google.android.material:material:$material_version"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    implementation "androidx.paging:paging-runtime:$paging_version"
 }
