--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,11 @@ buildscript {
         material_version = "1.0.0"
         moshi_version = ''
         nav_version = "2.1.0"
+        paging_version = "2.1.1"
         picasso_version = "2.71828"
         recyclerview_version = '1.1.0'
         retrofit2_version = '2.5.0'
+        room_version = '2.2.3'
         runner_version = '1.2.0'
     }
 
