add collapse tool bar layout, work in progress

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 
         appcompat_version = '1.1.0'
         constraintlayout_version = '1.1.3'
+        exoplayer_version = '2.11.1'
         expresso_version = '3.2.0'
         junit_version = '4.12'
         legacy_support_version = '1.0.0'
