--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,8 @@ android {
         enabled = true
     }
     compileOptions {
-        targetCompatibility = 1.8
+        targetCompatibility JavaVersion.VERSION_1_8
+//        targetCompatibility = 1.8
         sourceCompatibility = 1.8
     }
 }
@@ -56,4 +57,6 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
     implementation "androidx.paging:paging-runtime:$paging_version"
+
+    implementation "com.google.android.exoplayer:exoplayer:$exoplayer_version"
 }
